k8s/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: db-namespace
spec:
  ports:
    - port: 3306
  selector:
    app: db
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: db-namespace
spec:
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - image: mysql:8.0
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
