k8s/istio-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-destinationrule
spec:
  host: webapp # service
  subsets:
    - name: webapp
      trafficPolicy:
        connectionPool:
          tcp:
            maxConnections: 100
